<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settingViewModel"
            type="com.example.liveapp2021.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting.SettingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/footer">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gif_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF0078D7"
            app:layout_constraintBottom_toBottomOf="parent">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="@{()->settingViewModel.onFirst()}"
                android:visibility="invisible"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/first"/>
            <View
                android:layout_height="1dp"
                android:layout_width="0dp"
                android:layout_weight="1" />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="@{()->settingViewModel.onNext()}"
                android:visibility="invisible"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/next"/>
            <View
                android:layout_height="1dp"
                android:layout_width="0dp"
                android:layout_weight="1" />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="@{()->settingViewModel.onLast()}"
                android:visibility="invisible"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/last"/>
            <View
                android:layout_height="1dp"
                android:layout_width="0dp"
                android:layout_weight="1" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> settingViewModel.onStart()}"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/app_start" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>